[package]
name = "nfmd"
description = "An interactive flavor of markdown."
authors = ["nukkeldev <nukkel.dev@gmail.com>"]
homepage = "https://github.com/nukkeldev/mdi"
license = "MIT"

version = "0.0.1"
edition = "2024"

# TODO: Get rid of these.
[dependencies]
log = "0.4.26"
pretty_env_logger = "0.5.0"
